# prodigeetor

./: .gitattributes  .gitignore  CMakeLists.txt  ProdigeetorPlan.md
assets/fonts/Monoid/: README.md
core/: CMakeLists.txt  LSP_INTEGRATION.md  SYNTAX_HIGHLIGHTING.md
core/include/: core.h  grapheme.h  lsp_client.h  lsp_manager.h  lsp_types.h  rendering.h  settings.h  syntax_highlighter.h  text_buffer.h  text_types.h  theme.h  undo_stack.h
core/src/: core.cpp  grapheme.cpp  lsp_client.cpp  lsp_manager.cpp  rendering.cpp  settings.cpp  syntax_highlighter.cpp  text_buffer.cpp  theme.cpp  undo_stack.cpp
docs/: ComponentAPI.md
extensions/examples/hello-world/: extension.json  package.json
extensions/examples/hello-world/src/: index.ts
settings/: default.json
themes/: default.json
ui-linux/: CMakeLists.txt
ui-linux/src/: editor_widget.cpp  editor_widget.h  main.cpp  pango_renderer.cpp  pango_renderer.h  split_container.cpp  split_container.h  tab_container.cpp  tab_container.h
ui-macos/: README.md
ui-macos/Prodigeetor/: AppDelegate.swift  EditorViewController.swift  Info.plist  MainViewController.swift  Prodigeetor-Bridging-Header.h  SplitContainerViewController.swift  TabBarView.swift  TabContainerViewController.swift  main.swift
ui-macos/Prodigeetor.xcodeproj/: project.pbxproj
ui-macos/Prodigeetor.xcodeproj/xcshareddata/xcschemes/: Prodigeetor.xcscheme
ui-macos/Prodigeetor/Bridge/: CoreBridge.h  CoreBridge.mm  CoreTextRenderer.h  CoreTextRenderer.mm  EditorView.h  EditorView.mm  Prodigeetor-Bridging-Header.h
ui-macos/com.apple.DeveloperTools/26.2-17C52/Xcode/26.2-17C52/Xcode/: CachedSpecifications-xcodebuild  PlugInCache-xcodebuild.xcplugincache
